--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta name="author" content="Пушкин">
 </head>
 <body>
-Орел бьет <b>сокола</b> , а сокол бьет гусей;
-Страшатся <b>щуки</b> крокодила;
-От тигра гибнет волк, а кошка ,<b>ест</b> мышей.
-Всегда имеет <b>верх</b> над слабостию сила.
+Орел бьет <b>сокола</b> , а сокол бьет гусей;<br>
+Страшатся <b>щуки</b> крокодила;<br>
+От тигра гибнет волк, а кошка ,<b>ест</b> мышей.<br>
+Всегда имеет <b>верх</b> над слабостию сила.<br>
 </body>
 </html>
 
