--- a/index.html
+++ b/index.html
@@ -13,6 +13,37 @@
 </body>
 </html>
 
+<b>Завет богов</b><br>
+Кого не победит Аглаи томный взор,<br>
+Младенческая слов небрежность,<br>
+Ее приятный разговор<br>
+И чувств нелицемерна нежность, –<br>
+Тому любви вовек не знать;<br>
+Тот будет в мире сиротою,<br>
+Как отчужденный, тосковать<br>
+С своей холодною душою.<br>
+
+
+<b>Из письма к Горчакову</b><br>
+Зима мне рыхлою стеною<br>
+К воротам заградила путь;<br>
+Пока тропинки пред собою<br>
+Не протопчу я как-нибудь,<br>
+Сижу я дома, как бездельник;<br>
+Но ты, душа души моей,<br>
+Узнай, что будет в понедельник,<br>
+Что скажет наш Варфоломей.<br>
+
+
+<b>Твой и мой</b><br>
+Бог весть, за что философы, пииты<br>
+На твой и мой давным-давно сердиты.<br>
+Не спорю я с ученой их толпой,<br>
+Но и бранить причипы не имею<br>
+То, что дарит мне радость и покой,<br>
+Что, ежели б ты не была моею?<br>
+Что, ежели б я не был, Ниса, твой?<br>
+
 
 
 
