--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="author" content="Пушкин">
 </head>
 <body>
+<h1>Стихи Пушкина</h1>   
 Орел бьет <b>сокола</b> , а сокол бьет гусей;<br>
 Страшатся <b>щуки</b> крокодила;<br>
 От тигра гибнет волк, а кошка ,<b>ест</b> мышей.<br>
@@ -13,7 +14,7 @@
 </body>
 </html>
 
-<b>Завет богов</b><br>
+<h2><b>Завет богов</b><br></h2>
 Кого не победит Аглаи томный взор,<br>
 Младенческая слов небрежность,<br>
 Ее приятный разговор<br>
@@ -24,7 +25,7 @@
 С своей холодною душою.<br>
 <br>
 
-<b>Из письма к Горчакову</b><br>
+<h2><b>Из письма к Горчакову</b><br></h2>
 Зима мне рыхлою стеною<br>
 К воротам заградила путь;<br>
 Пока тропинки пред собою<br>
@@ -35,7 +36,7 @@
 Что скажет наш Варфоломей.<br>
 <br>
 
-<b>Твой и мой</b><br>
+<h2><b>Твой и мой</b><br></h2>
 Бог весть, за что философы, пииты<br>
 На твой и мой давным-давно сердиты.<br>
 Не спорю я с ученой их толпой,<br>
