--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
 <p>Бопре в отечестве своем был парикмахером, потом в Пруссии солдатом, потом приехал в Россию pour etre outchitel 1, не очень понимая значение этого слова. Он был добрый малый, но ветрен и беспутен до крайности. Главною его слабостию была страсть к прекрасному полу; нередко за свои нежности получал он толчки, от которых охал по целым суткам. К тому же не был он (по его выражению) и врагом бутылки, т. е. (говоря по-русски) любил хлебнуть лишнее. Но как вино подавалось у нас только за обедом, и то по рюмочке, причем учителя обыкновенно и обносили, то мой Бопре очень скоро привык к русской настойке и даже стал предпочитать ее винам своего отечества, как не в пример более полезную для желудка. Мы тотчас поладили, и хотя по контракту обязан он был учить меня по-французски, по-немецки и всем наукам, но он предпочел наскоро выучиться от меня кое-как болтать по-русски, — и потом каждый из нас занимался уже своим делом. Мы жили душа в душу. Другого ментора я и не желал. Но вскоре судьба нас разлучила, и вот по какому случаю:</p>
 
 
-
-
+<li>"Завет богов"</li>
+<li>"Их письма к Горчакову"</li>
+<li>"Твой и мой"</li>
+<ol>
+<br>
+<ul>
+<li>В лицее у Пушкина был друг — Вильгельм Кюхельбекер. Его черты поэт использовал в образе Владимира Ленского из поэмы «Евгений Онегин».Прадедом Пушкина по материнской линии был выходец из Эфиопии Абрам Петрович Ганнибал. Когда он попал в Россию, его окрестили, и крёстным отцом его был Пётр I.</li>
+<li>Своё первое произведение Пушкин написал в возрасте 8 лет. Это было стихотворение на французском языке. Поэт считал французский своим вторым родным языком. В лицее Пушкин даже имел прозвище «Француз».</li>
+<li>В лицее у Пушкина был друг — Вильгельм Кюхельбекер. Его черты поэт использовал в образе Владимира Ленского из поэмы «Евгений Онегин».</li>    
+</ul>
 
 
 
